# clone_fastapi_yog_sothoth

./: .gitlab-ci.yml  README.md  pyproject.toml
backend/: .coveragerc  .dockerignore  .flake8  Dockerfile  README.md  poetry.requirements.txt  pyproject.toml  tasks.py
backend/yog_sothoth/api/: auth.py  root.py  utils.py
backend/yog_sothoth/api/v1/: __init__.py  urls.py
backend/yog_sothoth/api/v1/endpoints/: __init__.py  matrix.py  registrations.py
backend/yog_sothoth/app/: __init__.py  events.py  fastapi.py  middlewares.py  router.py
backend/yog_sothoth/cache/: __init__.py  cache.py  redis.py
backend/yog_sothoth/conf/: __init__.py  global_settings.py  gunicorn.py  settings.py
backend/yog_sothoth/connectors/: __init__.py  matrix.py
backend/yog_sothoth/crud/: __init__.py  registration.py
backend/yog_sothoth/emails/: __init__.py  actions.py
backend/yog_sothoth/messages/: __init__.py  generic.py  manager.py  user.py
backend/yog_sothoth/objects/: __init__.py  rate_limit.py  registration.py
backend/yog_sothoth/schemas/: __init__.py  registration.py
backend/yog_sothoth/tasks/: __init__.py  matrix.py  notifications.py
backend/yog_sothoth/utils/: connectors.py  crypto.py  duration.py  json.py  project.py
deploy/: api.sample.env  docker-compose.yml  nginx-vhost.conf
docs/: diagrams.md
frontend/: README.md  index.html
yog_sothoth/: __init__.py  __main__.py  local_settings.sample.py  settings.py
yog_sothoth/api/: __init__.py  root.py  utils.py
yog_sothoth/app/: __init__.py  fastapi.py  middlewares.py  router.py
yog_sothoth/cache/: __init__.py  redis.py
yog_sothoth/crud/: __init__.py  registration.py
yog_sothoth/objects/: __init__.py  registration.py
(+12 files in other folders)
